--- a/web/frontendkatharina/views/index.html
+++ b/web/frontendkatharina/views/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/logo-nav.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -59,45 +60,55 @@
     <!-- /.container -->
 </nav>
 
+<!--
+            <th>PERIOD</th>
+            <th>REGION</th>
+            <th>PERIOD_YEAR</th>
+            <th>PERIOD_MONTH</th>
+            <th>CURRENCY</th>
+            <th>USERID</th>
+            <th>ENTRY_TS</th>
+            <th>PRODUCT_MAIN_GROUP</th>
+            <th>SALES_TYPE</th>
+            <th>SALES_VOLUMES</th>
+            <th>NET_SALES</th>
+            <th>CM1</th>
+            <th>TOPDOWN_ADJUST_SALES_VOLUMES</th>
+            <th>TOPDOWN_ADJUST_NET_SALES</th>
+            <th>TOPDOWN_ADJUST_CM1</th>
+            <th>PLAN_PERIOD</th>
+            <th>PLAN_YEAR</th>
+            <th>PLAN_HALF_YEAR</th>
+            <th>PLAN_QUARTER</th>
+            <th>PLAN_MONTH</th>
+            <th>ENTRY_TYPE</th>
+            <th>STATUS</th>
+            <th>USERCOMMENT</th>
+-->
 <div>
     <table id="example" class="display" cellspacing="0" width="100%">
         <thead>
         <tr>
-            <th>Name</th>
-            <th>Position</th>
-            <th>Office</th>
-            <th>Age</th>
-            <th>Start date</th>
-            <th>Salary</th>
+            <th>PERIOD</th>
+            <th>REGION</th>
+            <th>PERIOD_YEAR</th>
+            <th>PERIOD_MONTH</th>
+            <th>CURRENCY</th>
+            <th>USERID</th>
         </tr>
         </thead>
         <tfoot>
         <tr>
-            <th>Name</th>
-            <th>Position</th>
-            <th>Office</th>
-            <th>Age</th>
-            <th>Start date</th>
-            <th>Salary</th>
+            <th>PERIOD</th>
+            <th>REGION</th>
+            <th>PERIOD_YEAR</th>
+            <th>PERIOD_MONTH</th>
+            <th>CURRENCY</th>
+            <th>USERID</th>
         </tr>
         </tfoot>
         <tbody>
-        <tr>
-            <td>Tiger Nixon</td>
-            <td>System Architect</td>
-            <td>Edinburgh</td>
-            <td>61</td>
-            <td>2011/04/25</td>
-            <td>$320,800</td>
-        </tr>
-        <tr>
-            <td>Garrett Winters</td>
-            <td>Accountant</td>
-            <td>Tokyo</td>
-            <td>63</td>
-            <td>2011/07/25</td>
-            <td>$170,750</td>
-        </tr>
+
         </tbody>
     </table>
 </div>
