--- a/web/frontendkatharina/views/index.html
+++ b/web/frontendkatharina/views/index.html
@@ -17,12 +17,14 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css"/>
+    <link rel="stylesheet" type="text/css"
+          href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
-    <script src="../javascript/main.js"></script>
+    <script type="text/javascript"
+            src="https://code.jquery.com/jquery-1.12.3.js"></script>
+    <script type="text/javascript"
+            src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
 
 
 </head>
@@ -33,14 +35,16 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="index.html" class="navbar-brand" >
-                <img src="../img/fourschlag-logo.png" alt="Fourschlag-Logo" height="60" width="60"/>
+            <a href="index.html" class="navbar-brand">
+                <img src="../img/fourschlag-logo.png" alt="Fourschlag-Logo"
+                     height="60" width="60"/>
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,7 +55,7 @@
                     <a>Daten abfragen</a>
                 </li>
                 <li>
-                    <a>Daten ändern</a>
+                    <a>Daten einfügen</a>
                 </li>
             </ul>
         </div>
@@ -59,6 +63,88 @@
     </div>
     <!-- /.container -->
 </nav>
+
+<div class="jumbotron">
+    <form class="form-horizontal">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-10 col-md-3">
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label"
+                               for="backendServer">Backend</label>
+                        <div class="col-lg-8">
+                            <input type="text" class="form-control"
+                                   name="backendServer"
+                                   value="141.19.145.142:8080">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label"
+                               for="kpiType">Area</label>
+                        <div class="col-lg-8">
+                            <select class="form-control" id="kpiType">
+                                <option>sales</option>
+                                <option>fixed costs</option>
+                            </select>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-xs-12 col-md-3">
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label"
+                               for="year">Plan-Year</label>
+                        <div class="col-lg-8">
+
+                            <input type="text" class="form-control"
+                                   id="datepicker_planYear"
+                                   name="year"
+                                   value="2013">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label"
+                               for="period">Period</label>
+                        <div class="col-lg-8">
+                            <input type="text" class="form-control"
+                                   id="datepicker_period"
+                                   name="period"
+                                   value="201611">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label"
+                               for="currency">Currency</label>
+                        <div class="col-lg-8">
+                            <input type="text" class="form-control"
+                                   name="currency"
+                                   value="eur">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-1">
+                    <div class="form-group">
+                        <label class="col-lg-2 control-label"
+                               for=""></label>
+                        <div class="col-lg-2">
+                            <button type="button"
+                                    id="startbutton"
+                                    class="btn btn-default"><img
+                                    width="120px"
+                                    height="120px"
+                                    src="../img/fourschlag-logo.png"/>
+
+                            </button>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </form>
+
+</div>
 
 <!--
             <th>PERIOD</th>
@@ -84,28 +170,78 @@
             <th>ENTRY_TYPE</th>
             <th>STATUS</th>
             <th>USERCOMMENT</th>
+
+            { "data": "ENTRY_TYPE" },
+            { "data": "REGION" },
+            { "data": "SUBREGION" },
+            { "data": "SUB" },
+            { "data": "PRODUCT_MAIN_GROUP" },
+            { "data": "SALES_TYPE" },
+            { "data": "FC_TYPE" },
+            { "data": "ORDER_NUMBER" },
+            { "data": "KPI" },
+            { "data": "UNIT" },
+            { "data": "M01" },
+            { "data": "M02" },
+            { "data": "M03" },
+            { "data": "M04" },
+            { "data": "M05" },
+            { "data": "M06" },
+            { "data": "M07" },
+            { "data": "M08" },
+            { "data": "M09" },
+            { "data": "M10" },
+            { "data": "M11" },
+            { "data": "M12" },
+            { "data": "M13" },
+            { "data": "M14" },
+            { "data": "M15" },
+            { "data": "M16" },
+            { "data": "M17" },
+            { "data": "M18" },
+            { "data": "BJ2" },
+            { "data": "BJ3" },
+            { "data": "BJ4" }
 -->
 <div>
-    <table id="example" class="display" cellspacing="0" width="100%">
+    <table id="example" class="display" cellspacing="0">
         <thead>
         <tr>
-            <th>PERIOD</th>
+            <th>ENTRY_TYPE</th>
             <th>REGION</th>
-            <th>PERIOD_YEAR</th>
-            <th>PERIOD_MONTH</th>
-            <th>CURRENCY</th>
-            <th>USERID</th>
+            <th>SUBREGION</th>
+            <th>SBU</th>
+            <th>PRODUCT_MAIN_GROUP</th>
+            <th>SALES_TYPE</th>
+            <th>FC_TYPE</th>
+            <th>ORDER_NUMBER</th>
+            <th>KPI</th>
+            <th>UNIT</th>
+            <th>M01</th>
+            <th>M02</th>
+            <th>M03</th>
+            <th>M04</th>
+            <th>M05</th>
+            <th>M06</th>
+            <th>M07</th>
+            <th>M08</th>
+            <th>M09</th>
+            <th>M10</th>
+            <th>M11</th>
+            <th>M12</th>
+            <th>M13</th>
+            <th>M14</th>
+            <th>M15</th>
+            <th>M16</th>
+            <th>M17</th>
+            <th>M18</th>
+            <th>BJ2</th>
+            <th>BJ3</th>
+            <th>BJ4</th>
         </tr>
         </thead>
         <tfoot>
-        <tr>
-            <th>PERIOD</th>
-            <th>REGION</th>
-            <th>PERIOD_YEAR</th>
-            <th>PERIOD_MONTH</th>
-            <th>CURRENCY</th>
-            <th>USERID</th>
-        </tr>
+
         </tfoot>
         <tbody>
 
@@ -114,6 +250,7 @@
 </div>
 
 
+<script src="../javascript/main.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 
 </body>
