--- a/web/frontendkatharina/views/index.html
+++ b/web/frontendkatharina/views/index.html
@@ -89,6 +89,17 @@
                             </select>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label"
+                        >Area</label>
+                        <div class="col-lg-8">
+                            <select class="form-control" id="keyspace">
+                                <option selected="selected">HUNDRED_THOUSAND</option>
+                                <option>THREE_HUNDRED_THOUSAND</option>
+                                <option>NINE_HUNDRED_THOUSAND</option>
+                            </select>
+                        </div>
+                    </div>
 
                 </div>
                 <div class="col-xs-12 col-md-3">
