added insert html

--- a/web/frontendkatharina/views/index.html
+++ b/web/frontendkatharina/views/index.html
@@ -55,7 +55,7 @@
                     <a>Daten abfragen</a>
                 </li>
                 <li>
-                    <a>Daten einfügen</a>
+                    <a  href="insert.html" >Daten einfügen</a>
                 </li>
             </ul>
         </div>
@@ -158,63 +158,6 @@
 
 </div>
 
-<!--
-            <th>PERIOD</th>
-            <th>REGION</th>
-            <th>PERIOD_YEAR</th>
-            <th>PERIOD_MONTH</th>
-            <th>CURRENCY</th>
-            <th>USERID</th>
-            <th>ENTRY_TS</th>
-            <th>PRODUCT_MAIN_GROUP</th>
-            <th>SALES_TYPE</th>
-            <th>SALES_VOLUMES</th>
-            <th>NET_SALES</th>
-            <th>CM1</th>
-            <th>TOPDOWN_ADJUST_SALES_VOLUMES</th>
-            <th>TOPDOWN_ADJUST_NET_SALES</th>
-            <th>TOPDOWN_ADJUST_CM1</th>
-            <th>PLAN_PERIOD</th>
-            <th>PLAN_YEAR</th>
-            <th>PLAN_HALF_YEAR</th>
-            <th>PLAN_QUARTER</th>
-            <th>PLAN_MONTH</th>
-            <th>ENTRY_TYPE</th>
-            <th>STATUS</th>
-            <th>USERCOMMENT</th>
-
-            { "data": "ENTRY_TYPE" },
-            { "data": "REGION" },
-            { "data": "SUBREGION" },
-            { "data": "SUB" },
-            { "data": "PRODUCT_MAIN_GROUP" },
-            { "data": "SALES_TYPE" },
-            { "data": "FC_TYPE" },
-            { "data": "ORDER_NUMBER" },
-            { "data": "KPI" },
-            { "data": "UNIT" },
-            { "data": "M01" },
-            { "data": "M02" },
-            { "data": "M03" },
-            { "data": "M04" },
-            { "data": "M05" },
-            { "data": "M06" },
-            { "data": "M07" },
-            { "data": "M08" },
-            { "data": "M09" },
-            { "data": "M10" },
-            { "data": "M11" },
-            { "data": "M12" },
-            { "data": "M13" },
-            { "data": "M14" },
-            { "data": "M15" },
-            { "data": "M16" },
-            { "data": "M17" },
-            { "data": "M18" },
-            { "data": "BJ2" },
-            { "data": "BJ3" },
-            { "data": "BJ4" }
--->
 <div>
     <div>
         <table id="KpiTable" class="display" cellspacing="0" width="100%">
