--- a/web/frontendkatharina/views/forecastfixedcosts.html
+++ b/web/frontendkatharina/views/forecastfixedcosts.html
@@ -52,10 +52,10 @@
             <ul class="nav navbar-nav">
 
                 <li>
-                    <a>Daten abfragen</a>
+                    <a href="index.html">Daten abfragen</a>
                 </li>
                 <li>
-                    <a>Daten einfügen</a>
+                    <a href="insert.html" >Daten einfügen</a>
                 </li>
             </ul>
         </div>
