--- a/web/frontendkatharina/views/index.html
+++ b/web/frontendkatharina/views/index.html
@@ -141,7 +141,8 @@
                         <div class="col-lg-2">
                             <button type="button"
                                     id="startbutton"
-                                    class="btn btn-default"><img
+                                    class="btn btn-default"
+                                    data-role="button" ><img
                                     width="120px"
                                     height="120px"
                                     src="../img/fourschlag-logo.png"/>
