--- a/web/frontendkatharina/views/forecastsales.html
+++ b/web/frontendkatharina/views/forecastsales.html
@@ -109,7 +109,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
+                <h4 class="modal-title">Daten</h4>
             </div>
             <div class="modal-body">
                 <h1>Bitte ändern Sie die Daten</h1>
@@ -154,13 +154,13 @@
                         <input class="form-control" type="text" id="planYear" disabled /><br />
                         <label for="planHalfYear">PLAN_HALF_YEAR:</label>
                         <input class="form-control" type="text" id="planHalfYear" disabled /><br />
-                        <label for="planQuarter">PLAN_QUARTER</label>
+                        <label for="planQuarter">PLAN_QUARTER:</label>
                         <input class="form-control" type="text" id="planQuarter" disabled /><br />
-                        <label for="planMonth">PLAN_MONTH</label>
+                        <label for="planMonth">PLAN_MONTH:</label>
                         <input class="form-control" type="text" id="planMonth" disabled /><br />
-                        <label for="entryType">ENTRY_TYPEe</label>
+                        <label for="entryType">ENTRY_TYPE:</label>
                         <input class="form-control" type="text" id="entryType" disabled /><br />
-                        <label for="status">STATUS</label>
+                        <label for="status">STATUS:</label>
                         <input class="form-control" type="text" id="status" disabled /><br />
                         <label for="usercomment">USERCOMMENT:</label>
                         <input class="form-control" type="text" id="usercomment" disabled /><br />
