--- a/web/frontendkatharina/views/insert.html
+++ b/web/frontendkatharina/views/insert.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/logo-nav.css" rel="stylesheet">
+    <link href="../css/main.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -63,6 +64,80 @@
     </div>
     <!-- /.container -->
 </nav>
+
+<div id="insert">
+    <div class="form-group row">
+        <label for="period" class="col-xs-2 col-form-label">PERIOD:</label>
+        <div class="col-xs-10">
+            <input class="form-control" type="text" id="period"/><br/>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="region" class="col-xs-2 col-form-label">REGION:</label>
+        <div class="col-xs-10">
+            <input class="form-control" type="text" id="region"/><br />
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="periodYear" class="col-xs-2 col-form-label">PERIOD_YEAR</label>
+        <div>
+            <input class="form-control" type="text" id="periodYear"/><br />
+        </div>
+    </div>
+    <div class="form-group row">
+
+        <div class="col-xs-10">
+
+        </div>
+    </div>
+
+
+
+
+            <label for="periodMoth" class="col-xs-2 col-form-label">PERIOD_MONTH</label>
+            <input class="form-control" type="text" id="periodMoth" disabled /><br />
+            <label for="currency" class="col-xs-2 col-form-label">CURRENCY</label>
+            <input class="form-control" type="text" id="currency" disabled /><br />
+            <label for="userid" class="col-xs-2 col-form-label">USERID:</label>
+            <input class="form-control" type="text" id="userid" disabled /><br />
+            <label for="entryts" class="col-xs-2 col-form-label">ENTRY_TS:</label>
+            <input class="form-control" type="text" id="entryts" disabled /><br />
+            <label for="productMainGroup" class="col-xs-2 col-form-label">PRODUCT_MAIN_GROUP</label>
+            <input class="form-control" type="text" id="productMainGroup" disabled /><br />
+            <label for="salesType" class="col-xs-2 col-form-label">SALES_TYPE:</label>
+            <input class="form-control" type="text" id="salesType" disabled /><br />
+            <label for="salesVolumes" class="col-xs-2 col-form-label">SALES_VOLUMES:</label>
+            <input class="form-control" type="number" id="salesVolumes" /><br />
+            <label for="netSales" class="col-xs-2 col-form-label">NET_SALES:</label>
+            <input class="form-control" type="number" id="netSales" /><br />
+            <label for="cm1" class="col-xs-2 col-form-label">CM1:</label>
+            <input class="form-control" type="number" id="cm1" /><br />
+            <label for="topdownSalesVolumes" class="col-xs-2 col-form-label">TOPDOWN_ADJUST_SALES_VOLUMES</label>
+            <input class="form-control" type="number" id="topdownSalesVolumes" /><br />
+            <label for="topdownNetSales" class="col-xs-2 col-form-label">TOPDOWN_ADJUST_NET_SALES:</label>
+            <input class="form-control" type="number" id="topdownNetSales" /><br />
+            <label for="topdownCm1" class="col-xs-2 col-form-label">TOPDOWN_ADJUST_CM1:</label>
+            <input class="form-control" type="number" id="topdownCm1" /><br />
+            <label for="planPeriod" class="col-xs-2 col-form-label">PLAN_PERIOD:</label>
+            <input class="form-control" type="text" id="planPeriod" disabled /><br />
+            <label for="planYear" class="col-xs-2 col-form-label">PLAN_YEAR:</label>
+            <input class="form-control" type="text" id="planYear" disabled /><br />
+            <label for="planHalfYear" class="col-xs-2 col-form-label">PLAN_HALF_YEAR:</label>
+            <input class="form-control" type="text" id="planHalfYear" disabled /><br />
+            <label for="planQuarter" class="col-xs-2 col-form-label">PLAN_QUARTER:</label>
+            <input class="form-control" type="text" id="planQuarter" disabled /><br />
+            <label for="planMonth" class="col-xs-2 col-form-label">PLAN_MONTH:</label>
+            <input class="form-control" type="text" id="planMonth" disabled /><br />
+            <label for="entryType" class="col-xs-2 col-form-label">ENTRY_TYPE:</label>
+            <input class="form-control" type="text" id="entryType" disabled /><br />
+            <label for="status" class="col-xs-2 col-form-label">STATUS:</label>
+            <input class="form-control" type="text" id="status" disabled /><br />
+            <label for="usercomment" class="col-xs-2 col-form-label">USERCOMMENT:</label>
+            <input class="form-control" type="text" id="usercomment" disabled /><br />
+        </form>
+    </div>
+</div>
+
 
 <script src="../javascript/main.js"></script>
 <script src="../js/bootstrap.min.js"></script>
