--- a/web/frontendkatharina/css/main.css
+++ b/web/frontendkatharina/css/main.css
@@ -1,7 +1,17 @@
-#insert{
-    margin-left: 10%;
+#form{
     padding: 10px;
-    margin-right: 30%;
-    float: left;
-    border: 1px solid black;
+}
+#divforform{
+    margin-left: 4%;
+    margin-right: 20%;
+    background: rgba(104, 143, 191, 0.38)
+}
+
+#überschrift{
+    text-align: left;
+    margin-left: 4%;
+}
+
+#buttons{
+
 }
