--- a/web/frontendkatharina/views/index.html
+++ b/web/frontendkatharina/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
     <!-- Bootstrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/logo-nav.css" rel="stylesheet">
-
+    <link href="../css/main.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -51,11 +51,15 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
 
-                <li>
-                    <a>Daten abfragen</a>
+                <li class="nav-item">
+                    <a href="index.html">Daten abfragen</a>
                 </li>
-                <li>
-                    <a  href="insert.html" >Daten einfügen</a>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Daten einfügen<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="insertsales.html">Sales</a></li>
+                        <li><a class="dropdown-item" href="insertfixedcosts.html">Fixed Costs</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
