--- a/web/frontendkatharina/views/insertsales.html
+++ b/web/frontendkatharina/views/insertsales.html
@@ -76,7 +76,7 @@
 
 <div id ='divforform'>
 
-    <form id="form" action="http://141.19.144.62:8080/fourschlag/api/TEST/sales/" method="post">
+    <form id="form" action="http://localhost:8080/fourschlag/api/TEST/sales/" method="post">
 
     <div class="form-group row">
         <label for="period" class="col-xs-3 col-form-label">PERIOD:</label>
