--- a/web/frontendkatharina/views/index.html
+++ b/web/frontendkatharina/views/index.html
@@ -101,6 +101,7 @@
                                 <option selected="selected">HUNDRED_THOUSAND</option>
                                 <option>THREE_HUNDRED_THOUSAND</option>
                                 <option>NINE_HUNDRED_THOUSAND</option>
+                                <option>TEST</option>
                             </select>
                         </div>
                     </div>
@@ -115,7 +116,7 @@
                             <input type="text" class="form-control"
                                    id="datepicker_planYear"
                                    name="year"
-                                   value="2013">
+                                   value="2016">
                         </div>
                     </div>
                     <div class="form-group">
@@ -125,7 +126,7 @@
                             <input type="text" class="form-control"
                                    id="datepicker_period"
                                    name="period"
-                                   value="201611">
+                                   value="201606">
                         </div>
                     </div>
                     <div class="form-group">
