--- a/web/frontendkatharina/views/insertfixedcosts.html
+++ b/web/frontendkatharina/views/insertfixedcosts.html
@@ -76,109 +76,109 @@
 
 <div id ='divforform'>
 
-    <form id="form" id="form" action="http://141.19.144.62:8080/fourschlag/api/TEST/fixedcosts/" method="post">
+    <form id="form" action="http://localhost:8080/fourschlag/api/TEST/sales/" method="post">
 
         <div class="form-group row">
-            <label for="period" class="col-xs-3 col-form-label">PERIOD:</label>
+            <label for="period" class="col-xs-4 col-form-label">PERIOD:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="period"/><br/>
+                <input class="form-control" type="number" id="period" name="period"/><br/>
             </div>
         </div>
         <div class="form-group row">
-            <label for="region" class="col-xs-3 col-form-label">REGION:</label>
+            <label for="region" class="col-xs-4 col-form-label">REGION:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="region"/><br />
+                <input class="form-control" type="text" id="region" name="region"/><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="currency" class="col-xs-3 col-form-label">CURRENCY:</label>
+            <label for="currency" class="col-xs-4 col-form-label">CURRENCY:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="currency"/><br />
+                <input class="form-control" type="text" id="currency" name="currency"/><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="userid" class="col-xs-3 col-form-label">USERID:</label>
+            <label for="userid" class="col-xs-4 col-form-label">USERID:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="userid" value="browser"/><br />
+                <input class="form-control" type="text" id="userid" value="browser" name="userid"/><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="entryts" class="col-xs-3 col-form-label">ENTRY_TS:</label>
+            <label for="entryts" class="col-xs-4 col-form-label">ENTRY_TS:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="datetime-local" id="entryts" value="2016-04-12T23:20:50.52"/><br />
+                <input class="form-control" type="datetime-local" id="entryts" value="2016-04-12T23:20:50.52" name="entry_ts"/><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="productMainGroup" class="col-xs-3 col-form-label">PRODUCT_MAIN_GROUP</label>
+            <label for="productMainGroup" class="col-xs-4 col-form-label">PRODUCT_MAIN_GROUP</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="productMainGroup"/><br />
+                <input class="form-control" type="text" id="productMainGroup" name="product_main_group"/><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="salesType" class="col-xs-3 col-form-label">SALES_TYPE:</label>
+            <label for="salesType" class="col-xs-4 col-form-label">SALES_TYPE:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="salesType"/><br />
+                <input class="form-control" type="text" id="salesType" name="sales_type"/><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="salesVolumes" class="col-xs-3 col-form-label">SALES_VOLUMES:</label>
+            <label for="salesVolumes" class="col-xs-4 col-form-label">SALES_VOLUMES:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="salesVolumes" /><br />
+                <input class="form-control" type="number" id="salesVolumes" name="sales_volumes"/><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="netSales" class="col-xs-3 col-form-label">NET_SALES:</label>
+            <label for="netSales" class="col-xs-4 col-form-label">NET_SALES:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="netSales" /><br />
+                <input class="form-control" type="number" id="netSales" name="net_sales" /><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="cm1" class="col-xs-3 col-form-label">CM1:</label>
+            <label for="cm1" class="col-xs-4 col-form-label">CM1:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="cm1" /><br />
+                <input class="form-control" type="number" id="cm1" name="cm1"/><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="topdownSalesVolumes" class="col-xs-3 col-form-label">TOPDOWN_ADJUST_SALES_VOLUMES</label>
+            <label for="topdownSalesVolumes" class="col-xs-4 col-form-label">TOPDOWN_ADJUST_SALES_VOLUMES</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="topdownSalesVolumes" /><br />
+                <input class="form-control" type="number" id="topdownSalesVolumes" name="topdown_adjust_sales_volumes" /><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="topdownNetSales" class="col-xs-3 col-form-label">TOPDOWN_ADJUST_NET_SALES:</label>
+            <label for="topdownNetSales" class="col-xs-4 col-form-label">TOPDOWN_ADJUST_NET_SALES:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="topdownNetSales" /><br />
+                <input class="form-control" type="number" id="topdownNetSales" name="topdown_adjust_net_sales" /><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="topdownCm1" class="col-xs-3 col-form-label">TOPDOWN_ADJUST_CM1:</label>
+            <label for="topdownCm1" class="col-xs-4 col-form-label">TOPDOWN_ADJUST_CM1:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="topdownCm1" /><br />
+                <input class="form-control" type="number" id="topdownCm1" name="topdown_adjust_cm1" /><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="planPeriod" class="col-xs-3 col-form-label">PLAN_PERIOD:</label>
+            <label for="planPeriod" class="col-xs-4 col-form-label">PLAN_PERIOD:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="text" id="planPeriod" /><br />
+                <input class="form-control" type="text" id="planPeriod" name="plan_period"/><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="entryType" class="col-xs-3 col-form-label">ENTRY_TYPE:</label>
+            <label for="entryType" class="col-xs-4 col-form-label">ENTRY_TYPE:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="entryType" /><br />
+                <input class="form-control" type="text" id="entryType" name="entry_type" /><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="status" class="col-xs-3 col-form-label">STATUS:</label>
+            <label for="status" class="col-xs-4 col-form-label">STATUS:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="status" /><br />
+                <input class="form-control" type="text" id="status" name="status"/><br />
             </div>
         </div>
 
         <div class="form-group row">
-            <label for="usercomment" class="col-xs-3 col-form-label">USERCOMMENT:</label>
+            <label for="usercomment" class="col-xs-4 col-form-label">USERCOMMENT:</label>
             <div class="col-xs-5">
-                <textarea class="form-control" id="usercomment" rows = '4' ></textarea>
+                <textarea class="form-control" id="usercomment" rows = '4' name="usercomment"></textarea>
             </div>
         </div>
         <div id = "buttons">
